
WIP      [CORE] [LEIA] Recursive context menus.
         Pay attention to the select() bug in Kodi Krypton.
         This requires Kodi version detection and having different code for Krypton/Leia.
         Start with the context menu in which recursiveness ir more useful.

WIP      [GRAPHICS] Optimize the generation of 3D boxes. Cache the background images used
         in all boxes.


[B]Advanced MAME Launcher | version 0.9.11 | xx June 2019[/B]

WIP      [DOCS] Improve the AML wiki in Github and move documentation from Kodi forum to
         Github wiki.

WIP      Retroarch core MAME 2003 Plus allows to save the MAME XML file needed by AML.
         In this core, the XML is extracted using the MAME internal menu, which must be
         opened with the Retroarch core options menu. The XML file is saved in the SAVES
         directory with name mame2003-plus/mame2003-plus.xml
         TTBOMK, currently it is the only core to support this feature.
         Exploit this to give support to MAME 2003 and then Android. According to
         Chrisism, Retroarch is currently the best way to use MAME in Android.

         See https://github.com/libretro/mame2003-libretro/pull/348
         See https://github.com/libretro/mame2003-plus-libretro/pull/8
         See https://github.com/libretro/mame2010-libretro/pull/123
         See https://github.com/libretro/mame2010-libretro/tree/master/metadata

WIP      Read-only Launcher (ROLs) to export into AEL.


[B]Advanced MAME Launcher | version 0.9.10 | 10 May 2019[/B]

FEATURE  Option to disable Software Lists at all in Vanilla MAME mode.

FEATURE  Management of MAME Favourite objects (delete missing, delete single).

FEATURE  Management of SL Favourite objects (delete missing, delete single).

FEATURE  Initial support for Retroarch MAME 2003 Plus core.

FEATURE  [CORE] Ability to export DAT files in Logiqx format for MAME ROMs and MAME CHDs.

FEATURE  [CORE] Differentiate between Non-merged and Fully non-merged MAME ROM sets.